# browser-in-browser

./: Dockerfile  README.md  main.py  pyproject.toml
js/: csspath.js  inject.js
static/: index.html  main.js
