[tool.poetry]
name = "browser-in-browser"
version = "0.1.0"
description = ""
authors = ["meirdev <maornet@gmail.com>"]
readme = "README.md"
packages = [{include = "browser-in-browser"}]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.40.0"
websockets = "^12.0"
fastapi = {extras = ["all"], version = "^0.104.1"}


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
